--- a/lib/my_todo_web/templates/layout/app.html.eex
+++ b/lib/my_todo_web/templates/layout/app.html.eex
@@ -17,6 +17,8 @@
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
+            <li><%= link "Tasks", to: Routes.task_path(@conn, :index) %></li>
+            <li><%= link "Home", to: Routes.page_path(@conn, :index) %></li>
           </ul>
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo">
