--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,7 @@
 /* This file is for your main application css. */
-@import "./phoenix.css";
+@charset "utf-8";
+@import './phoenix.css';
+@import '../node_modules/bulma/bulma.sass';
 
 /* Alerts and form errors */
 .alert {
