Convert the navbar into Bulma's implementation

--- a/lib/my_todo_web/templates/layout/app.html.eex
+++ b/lib/my_todo_web/templates/layout/app.html.eex
@@ -11,24 +11,41 @@
   <body>
     <header>
       <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
-            <li><%= link "Tasks", to: Routes.task_path(@conn, :index) %></li>
-            <li><%= link "Home", to: Routes.page_path(@conn, :index) %></li>
-          </ul>
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="https://phoenixframework.org/">
+              <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" width="112" height="28">
+            </a>
+
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+
+          <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+              <a class="navbar-item" href="https://hexdocs.pm/phoenix/overview.html">
+                Get Started
+              </a>
+
+              <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
+                <%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home), class: "navbar-item" %>
+              <% end %>
+
+              <%= link "Home", to: Routes.page_path(@conn, :index), class: "navbar-item" %>
+
+              <%= link "Tasks", to: Routes.task_path(@conn, :index), class: "navbar-item" %>
+            </div>
+          </div>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
       </section>
     </header>
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+
       <%= @inner_content %>
     </main>
   </body>
