--- a/lib/my_todo_web/templates/layout/app.html.eex
+++ b/lib/my_todo_web/templates/layout/app.html.eex
@@ -7,6 +7,7 @@
     <title>MyTodo · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script defer src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   </head>
   <body>
     <header>
@@ -43,9 +44,6 @@
       </section>
     </header>
     <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-
       <%= @inner_content %>
     </main>
   </body>
